prometheus/overlays/monitoring/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: 'false'
    nginx.ingress.kubernetes.io/force-ssl-redirect: 'false'
    cert-manager.io/issuer: "cluster-issuer-selfsigned"
    cert-manager.io/issuer-kind: "ClusterIssuer"
    metallb.uniberse.tf/address-pool: default
    nginx.ingress.kubernetes.io/allow-http: "true"
    prometheus.io/scrape: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - grafana.k3s
      secretName: grafana.k3s.cloud-tls
  rules:
    - host: grafana.k3s
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  name: http
                namespace: monitoring
